[tool.poetry]
name = "licenses"
version = "0.1.0"
description = ""
authors = ["ItsNiceCraft <74358857+ItsNiceCraft@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
